k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titan
  labels:
    app.kubernetes.io/name: titan
    app.kubernetes.io/part-of: project-titan
    app.kubernetes.io/managed-by: kubectl
