k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: rushi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rushi-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1    
  template:
    metadata:
      labels:
        app: rushi-app
        version: "1.0.0"
    spec:
      containers:
      - name: frontend
        image: rushidholecom/rushi-frontend:v1
        ports:
        - containerPort: 80
