k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titan-ingress
  namespace: titan
  labels:
    app.kubernetes.io/name: titan-ingress
    app.kubernetes.io/part-of: project-titan
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - host: "${APP_HOST}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titan-frontend
                port:
                  number: 80
    - host: "${API_HOST}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titan-backend
                port:
                  number: 8080
